--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVOoCzrJu5zEZ9pRJB35mI",
+      "authorship_tag": "ABX9TyM617zHKpDBF+7T9UiExpL5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Science Tools and Ecosystem"
+        "*Exercise 2 - Create a markdown cell with the title of the notebook. (1 pt)*\n",
+        "# Data Science Tools and Ecosystem\n"
       ],
       "metadata": {
         "id": "OrpAbNiXRmbl"
@@ -38,6 +39,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 3 - Create a markdown cell for an introduction. (1 pt)*.\n",
+        "\n",
         "In this notebook, Data Science Tools and Ecosystem are summarized."
       ],
       "metadata": {
@@ -47,6 +50,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 4 - Create a markdown cell to list data science languages. (3 pts)*\n",
+        "\n",
+        "\n",
         "Some of the popular languages that Data Scientists use are:\n",
         "\n",
         "- R\n",
@@ -60,6 +66,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 5 - Create a markdown cell to list data science libraries. (3 pts)*\n",
+        "\n",
         "Some of the commonly used libraries used by Data Scientists include:\n",
         "1. NumPy - For numerical computing and array operations\n",
         "2. Pandas - For data manipulation and analysis\n",
@@ -73,6 +81,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 6 - Create a markdown cell with a table of Data Science tools. (3 pts)*\n",
+        "\n",
         "| Data Science Tools |\n",
         "|-------------------|\n",
         "| Jupyter Notebook  |\n",
@@ -86,10 +96,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 7 - Create a markdown cell introducing arithmetic expression examples. (1 pt)*\n",
+        "\n",
         "### Below are a few examples of evaluating arithmetic expressions in Python"
       ],
       "metadata": {
         "id": "AKobbP8nSWAa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Exercise 8 - Create a code cell to multiply and add numbers. (2 pts)*"
+      ],
+      "metadata": {
+        "id": "Kl9O7G74XU6j"
       }
     },
     {
@@ -118,6 +139,15 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Exercise 9 - Create a code cell to convert minutes to hours. (2 pts)*"
+      ],
+      "metadata": {
+        "id": "lNhmorfqXXnq"
+      }
     },
     {
       "cell_type": "code",
@@ -149,6 +179,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 10 -Insert a markdown cell to list Objectives. (3 pts)*\n",
+        "\n",
         "**Objectives:**\n",
         "- List popular languages for Data Science\n",
         "- Demonstrate basic arithmetic operations in Python\n",
@@ -162,6 +194,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*Exercise 11 - Create a markdown cell to indicate the Author’s name. (2 pts)*\n",
+        "\n",
         "## Author\n",
         "Erick Gerardo Calderon Reyes"
       ],
